tests/method/extra_args.rev
struct Foo {
    fn method(a, b) {
        print a
        print b
    }
}

Foo().method(1, 2, 3, 4) // error: wrong arguments number: expected 2 but got 4